--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "description": "a Sails application to upload apps and builds, with cms",
-  "keywords": ["sails", "upload server", "app server"],
+  "keywords": [
+    "sails",
+    "upload server",
+    "app server"
+  ],
   "dependencies": {
     "dateformat": "^1.0.11",
     "ejs": "~0.8.4",
@@ -25,7 +29,8 @@
     "rc": "~0.5.0",
     "sails": "~0.10.5",
     "sails-disk": "~0.10.0",
-    "sails-mongo": "^0.10.5"
+    "sails-mongo": "^0.10.5",
+    "skipper-s3": "^0.5.5"
   },
   "scripts": {
     "start": "node app.js",
