Change the body parser
Sails uses skipper by default, which doesnot work well if the input
parameters (text and files) are not in a particular order. Changed the
body parser to 'formidable' which seems formidable indeed.

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@
 # to fit your needs!
 ################################################
 
+// Upload files
+assets/uploads/
+
 
 
 
@@ -41,6 +44,8 @@
 
 config/local.js
 config/aws.js
+
+
 
 
 
